@@ -1,6 +1,7 @@
 pgcenter (current development) unstable; urgency=low
 
-  * Wrap rouuties into switch_context() function.
+  * Improve log tail, add header, store log location in screen struct.
+  * Wrap routines into switch_context() function.
   * Remove -O2 from Makefile, because unknown garbage appeared with log tail.
   * Fix: clear taillog screen before closing.
   * Add Makefile, manpage, license.
